# PokeScout

./: .env.example  .gitignore  .railway-deploy  Dockerfile  SETUP.md  docker-compose.yml  logs.1775123609655.json  pyproject.toml  railway.toml  schema.sql
.claude/: settings.json
landing/: capture-mockup.mjs  next.config.ts  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/setup/: page.tsx
landing/app/subscribe/: page.tsx
landing/app/terms/: page.tsx
landing/components/: CursorGlow.tsx  FAQ.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Pricing.tsx
landing/lib/: i18n.tsx
landing/public/: bot-flow.html  bot-mockup.html
locales/: en.json
scripts/: migrate_listing_fields.sql  save_fb_session.py  send_ascended_heroes_test.py  send_mockup_gif.py  test_auction_alert.py
src/pokefinder/: __init__.py  config.py  discord_listener.py  i18n.py  main.py  presets.py  scheduler.py  tcgcsv.py  tcgdex.py
src/pokefinder/api/: setup.py
src/pokefinder/bots/: service.py
src/pokefinder/db/: __init__.py  queries.py  supabase_client.py
src/pokefinder/matching/: __init__.py  dedup.py  engine.py  ocr.py  parser.py  pokemon_names.py
src/pokefinder/models/: __init__.py
src/pokefinder/notifications/: __init__.py  dispatcher.py  expiry_checker.py  telegram.py  whatsapp.py
src/pokefinder/payments/: __init__.py  paddle_webhooks.py  paypal_webhooks.py  stripe_webhooks.py
src/pokefinder/scrapers/: __init__.py  base.py  (+2 more)
tests/: conftest.py  test_dedup.py  test_matching.py  test_parser.py
(+13 files in other folders)
